--- a/ChrisWandNowellaH/MyGIS/MyGisBLLTests/MyGisBLLTests.csproj
+++ b/ChrisWandNowellaH/MyGIS/MyGisBLLTests/MyGisBLLTests.csproj
@@ -45,13 +45,22 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AddLayerTest.cs" />
+    <Compile Include="UnitTest1.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyGisBLL\MyGisBLL.csproj">
+      <Project>{7a368e11-0727-4aa5-bfad-9df6f73a0cff}</Project>
+      <Name>MyGisBLL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
