up to step 31 complete

--- a/ChrisWandNowellaH/MyGIS/MyGisConsole/MyGisConsole.csproj
+++ b/ChrisWandNowellaH/MyGIS/MyGisConsole/MyGisConsole.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyGisBLL\MyGisBLL.csproj">
+      <Project>{7a368e11-0727-4aa5-bfad-9df6f73a0cff}</Project>
+      <Name>MyGisBLL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
